@@ -6,6 +6,7 @@
     * Improve documentation
     * Add pre-transition ``check`` hook
     * Remove alternate ``Workflow`` definition schemes.
+    * Properly validate objects using two workflows with conflicting transitions.
 
 0.2.3 (15 04 2012)
 ------------------
